設定の初期化処理でSITEINFOデータベースのURLが空であればセットするよう修正

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -382,9 +382,9 @@
                 こちらの方が判別の精度が高く、対応言語が豊富ですが、通信を行うため結果を表示するまでの時間が若干伸びるかもしれません
             </p>
             <input type="radio" id="enable_language_detect_api" class="option" value="1" name="enable_language_detect_api" />
-            <label for="enable_language_detect_api" data-i18n="option_enable_detect_language_api">正規表現 と Google API で判定する</label><br>
+            <label for="enable_language_detect_api" data-i18n="option_enable_detect_language_api">正規表現 と Google API で判別する</label><br>
             <input type="radio" id="disable_language_detect_api" class="option" value="0" name="enable_language_detect_api" checked />
-            <label for="disable_language_detect_api" data-i18n="option_detect_language_regexp">正規表現のみで判定する</label><br>
+            <label for="disable_language_detect_api" data-i18n="option_detect_language_regexp">正規表現のみで判別する</label><br>
         </td>
     </tr><tr>
         <td class="option_td">
