--- a/src/html/options.html
+++ b/src/html/options.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="../css/options.css" type="text/css" />
 <script src="../js/lib/jquery-1.4.4.min.js"></script>
 <script src="../js/lib/jquery-ui-1.8.9.min.js"></script>
-<script src="../js/utils.js" async></script>
+<script src="../js/utils.js"></script>
 <script src="../js/keybinds.js"></script>
 <script src="../js/options.js" async></script>
 </head>
