--- a/src/html/options.html
+++ b/src/html/options.html
@@ -56,7 +56,7 @@
                 結果表示のポップアップを表示する位置を指定してください
             </p>
             <select id="result_position" class="option" name="result_position">
-                <option value="botom" label="bottom">
+                <option value="bottom" label="bottom">
                 <option value="left" label="left">
                 <option value="right" label="right">
                 <option value="top" label="top">
