--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -402,7 +402,7 @@ $(document).ready(function() {
             <th><label for="result_position" data-i18n="option_results_position">表示位置</label></th>
             <td>
                 <select id="result_position" class="option" name="result_position">
-                    <option value="buttom">buttom</option>
+                    <option value="bottom">bottom</option>
                     <option value="left">left</option>
                     <option value="right">right</option>
                     <option value="top">top</option>
