set strict mode.

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -8,6 +8,7 @@
 <script src="../js/utils.js"></script>
 <script src="../js/keybinds.js"></script>
 <script async>
+"use strict";
 var multilookup = chrome.extension.getBackgroundPage().multilookup;
 var popup = {};
 popup.lookup = {
