code cleanups based on jslint.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -278,12 +278,12 @@
         <th class="option_th" data-i18n="option_manage_siteinfo_db">データベースの追加・削除</th>
         <td class="option_td">
             <p class="notice" data-i18n="option_manage_siteinfo_db_description">
-                新たにサイト情報(SITEINFO)のデータベースを、URLを指定して追加、または削除します。<br>
-                現在、以下のデータベースが用意されており、インストール時にはブラウザの設定に対応する言語が登録されます。<br>
+                新たにサイト情報(SITEINFO)のデータベースを、URLを指定して追加、または削除します<br>
+                現在、以下のデータベースが用意されており、インストール時にはブラウザの設定に対応する言語が登録されます<br>
                 Ja: http://wedata.net/databases/Lookup/items.json<br>
                 En: http://wedata.net/databases/Lookup_en/items.json<br>
-                追加後は<strong>サイト情報の更新</strong>を行ってください。追加したデータベースのサイト情報が<strong>サイトの選択</strong>に反映されます。<br>
-                ※ データベースは、JSON形式の決められたフォーマットであれば Wedata 以外のものも追加することができます。
+                追加後は<strong>サイト情報の更新</strong>を行ってください。追加したデータベースのサイト情報が<strong>サイトの選択</strong>に反映されます<br>
+                ※ データベースは、JSON形式の決められたフォーマットであれば Wedata 以外のものも追加することができます
             </p>
             <label><span data-i18n="url">URL:</span>
                 <input id="siteinfo_db_url" style="width: 400px" type="text" />
@@ -443,8 +443,8 @@
                 <input name="create" type="button" data-i18n="button_addnew" value="新規追加" />
             </div>
             <div id="create_attention" style="display: none" data-i18n="option_edit_siteinfo_attention">
-                ※サイトを追加する場合は、そのサイトの規約をご確認上追加してください。<br>
-                name, url, type, src-lang は必須項目です。
+                ※サイトを追加する場合は、そのサイトの規約をご確認上追加してください<br>
+                name, url, type, src-lang は必須項目です
             </div>
             <div id="ad_siteinfo_edit_area">
                 <div class="notification"></div>
@@ -520,8 +520,9 @@
         <td class="option_td">
         <p class="notice" data-i18n="option_report_description">
             要望や問題などがありましたら以下のフォームから内容・問題の再現方法など入力し、送信してください<br>
-            報告頂いた内容は、<a target="_blank" href="http://www.simplivillage.com/trac/report/1">管理サイトのチケット</a>として登録されます。<br>
-            この拡張に関する感想は <a target="_blank" href="https://chrome.google.com/extensions/detail/kploejngmljnhpofmejijjhegehhdfoa?hl=ja">MultiLookup - Google Chrome 拡張機能ギャラリー</a> のコメントにお願いします
+            報告頂いた内容は、<a target="_blank" href="http://www.simplivillage.com/trac/report/1">管理サイトのチケット</a>として登録されます<br>
+            この拡張に関する感想は <a href="https://chrome.google.com/extensions/detail/kploejngmljnhpofmejijjhegehhdfoa?hl=ja"
+                                      target="_blank">MultiLookup - Google Chrome 拡張機能ギャラリー</a> のコメントにお願いします
         </p>
         <div id="report_result"></div>
         <div id="report_content">
