--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -3,12 +3,41 @@
 <head>
     <meta charset="utf-8">
     <title>MultiLookup</title>
+    <link rel="stylesheet" href="../css/popup.css" type="text/css"/>
     <script src="../js/lib/jquery-1.5.min.js"></script>
     <script src="../js/lib/jquery-ui-1.8.9.min.js"></script>
     <script src="../js/utils.js"></script>
     <script src="../js/keybinds.js"></script>
     <script src="../js/popup.js"></script>
-    <link rel="stylesheet" href="../css/popup.css" type="text/css"/>
+    <script>
+    $(document).ready(function () {
+      $('[data-i18n]').each(function () {
+        var message = _(this.dataset.i18n),
+        lang = window.navigator.language,
+        type = this.type;
+        if (!message) {
+          return;
+        }
+        if ((this.tagName === 'INPUT') &&
+            (type === 'button' || type === 'reset' || type === 'submit')) {
+          $(this).val(message).attr('lang', lang).removeAttr('title');
+        } else {
+          $(this).html(message).attr('lang', lang).removeAttr('title');
+        }
+      });
+
+      popup.lookup.init();
+      popup.option.init();
+      popup.cache.setCachedDataToForm();
+      $('.content-title').click(function () {
+        var name = this.id.replace('-title', '');
+        popup.changeTab(name);
+      });
+      var cache = popup.cache.getCachedData(),
+      tabname = cache.active_tab_name || 'lookup';
+      popup.changeTab(tabname);
+    });
+    </script>
 </head>
 <body>
 <header>
