Fixed an issue where the reset settings does not work.

--- a/src/html/options.html
+++ b/src/html/options.html
@@ -468,7 +468,7 @@
             <p class="notice" data-i18n="option_initialize_settings_description">
                 ※基本設定と高度な設定の設定項目すべてをデフォルト値に戻します
             </p>
-            <input type="button" onclick="MLuOptions.initialize.resetConfig();" data-i18n="button_initialize" value="初期設定に戻す" />
+            <input type="button" id="reset_config" data-i18n="button_initialize" value="初期設定に戻す" />
         </td>
     </tr>
     <tr>
@@ -479,7 +479,7 @@
             <p class="notice" data-i18n="option_initialize_siteinfo_description">
                 ※サイト情報をデフォルト値に戻します
             </p>
-            <input type="button" onclick="MLuOptions.initialize.resetSiteinfo();" data-i18n="button_initialize" value="初期設定に戻す" />
+            <input type="button" id="reset_siteinfo" data-i18n="button_initialize" value="初期設定に戻す" />
         </td>
     </tr>
     <tr>
@@ -488,7 +488,7 @@
             <p class="notice" data-i18n="option_initialize_all_description">
                 ※すべての設定項目とサイト情報をデフォルト値に戻します
             </p>
-            <input type="button" onclick="MLuOptions.initialize.resetAll();" data-i18n="button_initialize" value="初期設定に戻す" />
+            <input type="button" id="reset_all" data-i18n="button_initialize" value="初期設定に戻す" />
         </td>
     </tr>
 </table>
