use guessLanguage.js.

--- a/src/html/background.html
+++ b/src/html/background.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8" />
 <script src="../js/lib/jquery-1.5.min.js"></script>
 <script src="../js/lib/jsonpath-0.8.0.js"></script>
+<script src="../js/lib/_languageData.js"></script>
+<script src="../js/lib/guessLanguage.js"></script>
 <script src="../js/utils.js"></script>
 <script src="../js/background.js" async></script>
 </head>
